// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavBar Component Should render along with children componenet 1`] = `
<BrowserRouter>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <NavBar
      history={
        Object {
          "location": Object {
            "pathname": "/article/create",
          },
        }
      }
    >
      <nav
        className="flex items-center justify-between flex-wrap bg-white-500 pt-2 p-3 z-40 shadow-md"
      >
        <div
          className="flex items-center flex-shrink-0 text-dark mr-6"
        >
          <Link
            to="/"
          >
            <a
              href="/"
              onClick={[Function]}
            >
              <img
                alt="Author's Haven"
                className="w-3/12"
                id="logo"
                src="test-file-stub"
              />
            </a>
          </Link>
        </div>
        <div
          className="flex w-56 justify-between"
        >
          <CreateArticleNav
            history={
              Object {
                "location": Object {
                  "pathname": "/article/create",
                },
              }
            }
          >
            <Button
              classes="btn-purple w-40 hidden md:inline"
              name="Ready To Publish?"
              onClick={[Function]}
              type="button"
            >
              <button
                className="btn btn-purple w-40 hidden md:inline"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                Ready To Publish?
              </button>
            </Button>
            <Thumbnail>
              <div
                className="w-10"
              >
                <img
                  alt="Author's Haven"
                  className="w-full"
                  id="logo"
                  src="test-file-stub"
                />
              </div>
            </Thumbnail>
          </CreateArticleNav>
        </div>
      </nav>
    </NavBar>
  </Router>
</BrowserRouter>
`;

exports[`NavBar Component Should render without errors 1`] = `
<nav
  className="flex items-center justify-between flex-wrap bg-white-500 pt-2 p-3 z-40 shadow-md"
>
  <div
    className="flex items-center flex-shrink-0 text-dark mr-6"
  >
    <Link
      to="/"
    >
      <img
        alt="Author's Haven"
        className="w-3/12"
        id="logo"
        src="test-file-stub"
      />
    </Link>
  </div>
  <div
    className="flex w-56 justify-between"
  >
    <AuthNav
      history={
        Object {
          "location": Object {
            "pathname": "/signup",
          },
        }
      }
    />
  </div>
</nav>
`;
